overflow problem fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ header {
     background-repeat: no-repeat;
     background-attachment: fixed;
     filter: brightness(130%);
+    overflow-x: hidden;
 }
 
 /* --------------------------------------- */
